# cognitive-hq

./: .gitignore  .python-version  AGENT_RECREATION_GUIDE.md  CLAUDE.md  TELEGRAM_BOT_SPEC.md  pyproject.toml
.claude/: ABSTRACTIONS.md  ANALYSIS_HIERARCHICAL_CONTEXT.md  BOOTSTRAP.md  DERIVED_CONTEXT.DATA.md  DERIVED_CONTEXT.md  LEARNING_QUEUE.md  LOG.md  MASTER_ROADMAP.md  ONBOARDING.md  RULES.md  SESSION_SUMMARY_2026-02-14.md  STATE.md  TODO.md  TREE.txt  WORKFLOW.md  log.sh  tree.sh
.claude/INTENT/: CLAWDBOT_EVALUATION.md  CUSTOM_AGENT_V0.md  GATEWAY_DESIGN_V0.md  README.md
claude-telegram-relay/relay_v2/: DREAMING_MODE.md  LOG.md  TODO.md  claude_relay_wrapper.sh  cli_node.py  config.py  permission_hook.py  requirements.txt  session_manager.py  supabase_client.py  telegram_node.py
config/: settings.example.yaml
docs/: ARCHITECTURE.md  INTERACTIVE_TESTING_GUIDE.md  RELAY_ARCHITECTURE.md  TELEGRAM_SWAP_GUIDE.md
src/adapters/: inbox_client.py  inbox_server.py  memory_emulator.py  telegram_emulator.py  tool_registry.py
src/cli/: memory_cli.py  run_agent.py  send_message.py
src/cli/state/: telegram_inbox.jsonl
src/cloudcode_prompts/: examples.md  output_format.md  system_context.md  tool_contract.md
src/runner/: agent_runner.py  cloudcode_bridge.py  logging_utils.py  plan_schema.py  time_utils.py
tests/: test_agent_runner.py  test_cloudcode_bridge.py  test_e2e.py  test_inbox_client.py  test_inbox_server.py  test_memory_emulator.py  test_plan_schema.py  test_telegram_emulator.py  test_tool_registry.py
